# raze

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
benchmarks/: AdjacentFindBenchmark.cpp  BenchSimpleFind.cpp  CMakeLists.txt  ClzBenchmark.cpp  ContainsBenchmark.cpp  CopyBenchmark.cpp  CountBenchmark.cpp  CtzBenchmark.cpp  EqualBenchmark.cpp  FillBenchmark.cpp  FindBenchmark.cpp  FindEndBenchmark.cpp  FindFirstOfBenchmark.cpp  FindLastBenchmark.cpp  IsSortedBenchmark.cpp  MaxBenchmark.cpp  MinBenchmark.cpp  MinmaxBenchmark.cpp  MismatchBenchmark.cpp  RemoveBenchmark.cpp  RemoveCopyBenchmark.cpp  ReplaceBenchmark.cpp  ReplaceCopyBenchmark.cpp  ReverseBenchmark.cpp  ReverseCopyBenchmark.cpp  RotateBenchmark.cpp  RotateCopyBenchmark.cpp  SearchBenchmark.cpp  SearchNBenchmark.cpp  TransformBenchmark.cpp
benchmarks/tools/: BenchmarkHelper.h
cmake/: Util_ExportConfig.cmake  Util_InstallConfig.cmake  Util_InstallRules.cmake  razeConfig.cmake.in  x86_SImd.cmake
include/raze/: RazeNamespace.h  Types.h
include/raze/algorithm/: Algorithm.h
include/raze/arch/: CpuFeature.h  CpuId.h  ProcessorDetection.h  ProcessorFeatures.h  ProcessorInformation.h
include/raze/compatibility/: AlignmentMacros.h  AutoVectorization.h  BranchPrediction.h  CallingConventions.h  Compatibility.h  CompilerDetection.h  CxxVersionDetection.h  FunctionAttributes.h  Inline.h  LanguageFeatures.h  MemoryMacros.h  MsvcIntrinWorkaround.h  Nodiscard.h  SimdCompatibility.h  StackProtection.h  StaticOperators.h  SystemDetection.h  UnreachableCode.h  Warnings.h
include/raze/concurrency/: Execution.h  Thread.h  ThreadHandle.h  ThreadId.h  ThreadPool.h
include/raze/datapar/: Abi.h  BasicSimd.h  BasicSimdElementReference.h  BasicSimdMask.h  BasicSimdShuffleMask.h  Simd.h  SimdBitmask.h  SimdCast.h  SimdCompareResult.h  SimdConfig.h  SimdConvert.h  SimdDataparAlgorithms.h  SimdIndexMask.h
include/raze/math/: BitCast.h  BitMath.h  Math.h
include/raze/memory/: Alignment.h  Intersects.h  PointerToIntegral.h
include/raze/options/: Options.h
include/raze/system/: Handle.h
include/raze/vx/: Abi.h  Algorithm.h  BasicSimd.h  BasicSimdMask.h  Bitmask.h  Cast.h  Concepts.h  Config.h  Mask.h  Simd.h  SimdBitmask.h  SimdCast.h  SimdConfig.h  SimdDataparAlgorithms.h
src/raze/algorithm/: AdvanceBytes.h  AlgorithmDebug.h  EqualTo.h  FixedMemcmp.h  IsComparable.h  MsvcIteratorUnwrap.h  NotFn.h  RangesSize.h  SimdTransformable.h  VectorizablePredicate.h
src/raze/concurrency/: ThreadYield.h  WindowsThread.h  WindowsThreadPool.h  WindowsThreadPoolTasks.h
src/raze/datapar/: Arithmetic.h  BasicSimd.inl  BasicSimdElementReference.inl  BasicSimdMask.inl  Bitwise.h  CachePrefetcher.h  Compare.h  Expression.h  IntrinBitcast.h  IsComparable.h  MaskTypeSelector.h  Memory.h  Reduce.h  Shuffle.h  SimdCast.inl  SimdCompareAdapters.h  SimdCompareAdapters.inl  SimdCompareResult.inl  SimdDispatcher.h  SimdElementMaskOperations.h  SimdElementMaskOperations.inl  SimdIndexMask.inl  SimdIndexMaskOperations.h  SimdIndexMaskOperations.inl  SimdIntegralTypesCheck.h  SimdMaskCommonOperations.h  SimdMaskCommonOperations.inl  SimdMaskTypeCheck.h  SizedSimdDispatcher.h
src/raze/math/: Abs.h  BitTest.h  BitTestAndComplement.h  BitTestAndReset.h  BitTestAndSet.h  Cos.h  CosImplementation.h  Cotan.h  CotanImplementation.h  CountLeadingZeros.h  CountTrailingZeros.h  Fma.h  Fms.h  Fnma.h  Fnms.h  IntegralTypesConversions.h  MathConstants.h  PopulationCount.h  SignBit.h  Sin.h  SinImplementation.h  SinTables.h  Tan.h  TanImplementation.h
src/raze/options/: Aggregator.h  As.h  Call.h  Callable.h  Concepts.h  ConditionalCallable.h  DecoratedWith.h  Drop.h  Fetch.h  Foldable.h  Functor.h  If.h  IgnoreNone.h  Keys.h  Keywords.h  Merge.h  Option.h  Options.h  Or.h  SameAs.h  SelectKeys.h  Settings.h  StrictElementwiseCallable.h  Traits.h  TypeOr.h  Unroller.h
src/raze/type_traits/: CanMemcmpElements.h  ContainerComparison.h  FillMemsetSafety.h  FunctionInformation.h  FunctionPass.h  IntegralProperties.h  Invoke.h  IsConstantEvaluated.h  IsVirtualBaseOf.h  IteratorCategory.h  IteratorCheck.h  LexicographicalCompareTraits.h  OperatorWrappers.h  Ordering.h  SimdAlgorithmSafety.h  SimdTypeCheck.h  SwapSafety.h  TypeCheck.h  TypeTraits.h  UnwrapEnum.h
src/raze/utility/: Assert.h
src/raze/vx/: Arithmetic.h  AsTernaryMask.h  Bitwise.h  Compare.h  Concepts.h  Expression.h  IntrinBitcast.h  Memory.h  Reduce.h  Shuffle.h  SimdDispatcher.h  SimdIntegralTypesCheck.h  (+2 more)
tests/: CMakeLists.txt
tests/algorithm/: AdjacentFindTest.cpp  CMakeLists.txt  ContainsSubrangeTest.cpp  ContainsTest.cpp  CopyBackwardTest.cpp  CopyIfTest.cpp  CopyNTest.cpp  CopyTest.cpp  CountTest.cpp  EqualTest.cpp  ExtremeElementsTest.cpp  ExtremeTest.cpp  ExtremesTest.cpp  FillTest.cpp  FindEndTest.cpp  FindFirstOfTest.cpp  FindLastTest.cpp  FindTest.cpp  ForEachNTest.cpp  ForEachTest.cpp  IsSortedTest.cpp  IsSortedUntilTest.cpp  MaxElementTest.cpp  MaxTest.cpp  MinElementTest.cpp  MinTest.cpp  MinmaxElementTest.cpp  MinmaxTest.cpp  MismatchTest.cpp  MoveBackwardTest.cpp  MoveTest.cpp  ParallelFindTest.cpp  QueryTest.cpp  RemoveCopyTest.cpp  RemoveTest.cpp  ReplaceCopyTest.cpp  ReplaceTest.cpp  ReverseCopyTest.cpp  ReverseTest.cpp  RotateAlgorithmTest.cpp  (+10 more)
tests/concurrency/: CMakeLists.txt  ThreadTest.cpp
tests/math/: AbsTest.cpp  CMakeLists.txt  ClzTest.cpp  CtzTest.cpp  FusedOperationsTest.cpp  PopcntTest.cpp  SinTest.cpp
tests/type_traits/: CMakeLists.txt  InvokeTest.cpp
tests/utility/: Random.h  TestArithmeticTypes.h
tests/vx/: ArithmeticTest.cpp  BitwiseTest.cpp  CMakeLists.txt  CompareTest.cpp  CompressTest.cpp  ConcatTest.cpp  FoldTest.cpp  HorizontalMinmaxTest.cpp  MaskBitScanTest.cpp  MaskOperationsTest.cpp  MaskReductionsTest.cpp  MemoryTest.cpp  ReduceTest.cpp  RotateTest.cpp  SelectTest.cpp  ShuffleTest.cpp  SimdAbsTest.cpp  SimdBasicsTest.cpp  SimdFusedOperationsTest.cpp  SimdReverseTest.cpp  SimdSplatTest.cpp  SimdTestTools.h  SlideMergeTest.cpp  SlideTest.cpp  SplitTest.cpp  TernarylogicTest.cpp  VerticalMinmaxTest.cpp
(+628 files in other folders)
